<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shop_black_24dp"
        android:title="@string/title_shop" />
    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_cart_black_24dp"
        android:title="@string/title_basket" />
    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile_title" />
    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_about" />




</menu>
