<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.altas.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.altas.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />
    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.example.altas.ui.basket.BasketFragment"
        android:label="@string/title_basket"
        tools:layout="@layout/fragment_basket" />
    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.altas.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/product_details_fragment"
        android:name="com.example.altas.ui.product.ProductDetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_product_details" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.altas.ui.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.altas.ui.register.RegisterFragment"
        android:label="@string/register_title"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.altas.ui.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile" />


</navigation>